# TopCoW_Eval_Metrics_for_Colab_Env

./: pyproject.toml
topcow24_eval/: base_algorithm.py  evaluation.py
