[project]
name = "topcow24_eval"
version = "0.0.2"
description = "Evaluations for TopCoW24 MICCAI Challenge"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "evalutils==0.4.2",
    "pyyaml"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Repository = "https://github.com/CoWBenchmark/TopCoW_Eval_Metrics"
Issues = "https://github.com/CoWBenchmark/TopCoW_Eval_Metrics/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# specify the packages to be included manually
packages = [
    "topcow24_eval",
    "topcow24_eval.aggregate",
    "topcow24_eval.metrics.box_metrics",
    "topcow24_eval.metrics.edg_metrics",
    "topcow24_eval.metrics.seg_metrics",
    "topcow24_eval.metrics.seg_metrics.graph_classification",
    "topcow24_eval.metrics.seg_metrics.topology_matching",
    "topcow24_eval.utils"
]
